add tag video and initiate implementation.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   	</ul>
   	<span>title</span>
   	</div>
-    <h1>film</h1>
+    <video controls poster="./img/banner.png"></video>
     <script src="./js/index.js"></script>
   </body>
 </html>
