--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<li id="maximize"></li>
   	</ul>
   	<span>title</span>
+  	<input type="file" id="path">
   	</div>
     <video controls poster="./img/banner.png"></video>
     <script src="./js/index.js"></script>
